--- a/222.css
+++ b/222.css
@@ -1,3 +1,9 @@
+@media only screen and (max-device-width: 480px) {
+        div#wrapper {
+            width: 400px;
+  } 
+
+
 *{
     padding: 0;
     margin: 0;
